<resources>
    <string name="app_name">ConversorMoedas</string>
    <string name="qual_o_valor_em_real">Qual o valor em real?</string>
    <string name="valor_em_dolar">Valor em dolar</string>
    <string name="valor_em_euro">Valor em Euro</string>
    <string name="calcular">CALCULAR</string>
    <string name="informe_valor">Informe um valor</string>
    <string name="limpar">Limpar</string>
</resources>
