<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/qual_o_valor_em_real" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_value"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:inputType="numberSigned"
        android:text=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/valor_em_dolar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_dolar"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:textColor="@color/colorAccent"
        android:text="@string/valor_em_dolar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/valor_em_euro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_euro"
        android:textSize="18dp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:text="@string/valor_em_euro" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/button_calculate"
            android:layout_marginRight="5dp"
            android:text="@string/calcular"
            android:textColor="@color/colorLight"
            android:layout_marginTop="80dp"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"/>

        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/button_clear"
            android:layout_marginLeft="5dp"
            android:text="@string/limpar"
            android:textColor="@color/colorLight"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimaryText"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_resposta"/>

</LinearLayout>